# data_query_backend

./: .coverage  .coveragerc  .env.example  .gitignore  API_CONTRACT.md  LLM_SERVICE_CONTRACT.md  OLLAMA_SETUP.md  PLAN.md  QUICKSTART.md  README.md  STEPS.md  main.py  pyproject.toml  pytest.ini  test_api.py
app/: __init__.py  config.py  models.py
app/api/: dependencies.py
app/api/routes/: csv_routes.py  database_routes.py  health_routes.py  schema_routes.py
app/services/: csv_handler.py  database_service.py  llm_service.py
tests/: conftest.py  test_csv_routes.py  test_database_routes.py  test_health_routes.py  test_schema_routes.py  test_services.py
